--- a/src/scss/lib/scss.template.handlebars
+++ b/src/scss/lib/scss.template.handlebars
@@ -1,8 +1,11 @@
-{{#block "sprites"}}
+{{#extend "scss"}}
+{{#content "sprites"}}
 {{#each sprites}}
 ${{strings.name}}: ({{px.offset_x}}, {{px.offset_y}}, {{px.width}}, {{px.height}}, {{px.total_width}}, {{px.total_height}}, '{{{escaped_image}}}', '{{name}}', );
 {{/each}}
-{{/block}}
-{{#block "spritesheet"}}
-${{spritesheet_info.strings.name}}: ({{spritesheet.px.width}}, {{spritesheet.px.height}}, '{{{spritesheet.escaped_image}}}', );
-{{/block}}
+{{/content}}
+{{#content "spritesheet"}}
+${{spritesheet_info.strings.name_sprites}}: ({{#each sprites}}${{strings.name}}, {{/each}});
+${{spritesheet_info.strings.name}}: ({{spritesheet.px.width}}, {{spritesheet.px.height}}, '{{{spritesheet.escaped_image}}}', ${{spritesheet_info.strings.name_sprites}}, );
+{{/content}}
+{{/extend}}
